# browser-agents-qa-platform

./: .gitignore  README.md  pyproject.toml
src/browser_agents_qa/: __init__.py  config.py  main.py
src/browser_agents_qa/api/: dependencies.py  router.py
src/browser_agents_qa/api/routes/: health.py  runs.py  test_cases.py
src/browser_agents_qa/config/: skills.yaml
src/browser_agents_qa/planning/: __init__.py  planners.py  workflow.py
src/browser_agents_qa/runs/: __init__.py  models.py  repository.py  state.py
src/browser_agents_qa/skills/: __init__.py  catalogue.py  models.py
src/browser_agents_qa/skills/prompts/: assert_outcome.md  extract_page_content.md  inspect_accessibility.md  inspect_vision.md  perform_browser_action.md  verify_gateway_access.md
src/browser_agents_qa/test_cases/: __init__.py  models.py  repository.py
