[project]
name = "browser-agents-qa"
version = "0.1.0"
description = "A project for an agent-first QA automation platform."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "langchain>=1.3.9",
    "langgraph>=1.2.4",
    "pydantic-settings>=2.7.0,<3.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browser_agents_qa"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
